# clip_maker

./: .claudeignore  .gitignore  Dockerfile  README.md  config.toml  pyproject.toml
.github/workflows/: lint.yml  test.yml
clip_maker/: __init__.py  associator.py  classifier.py  cli.py  extractor.py  player_tracker.py  segmenter.py  tracker.py
tests/: test_segmenter.py
tools/: labeler.py
training/: dataset.py  train.py
