[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clip-maker"
version = "0.1.0"
description = "Automatic volleyball rally clip extractor"
requires-python = ">=3.11"
dependencies = [
    "onnxruntime>=1.18.0",
    "opencv-python-headless>=4.10.0",
    "ffmpeg-python>=0.2.0",
    "typer>=0.12.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.18.0",
]
train = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "peft>=0.10.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
label = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
clip-maker = "clip_maker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["clip_maker"]

[tool.ruff]
line-length = 100
target-version = "py311"
